# sh2mcp

./: Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
src/: cli.rs  executor.rs  handler.rs  main.rs  tool_def.rs
